# ubichat

./: CMakeLists.txt
UbiChatClient/: CMakeLists.txt  main.cpp  ubichatconsole.cpp  ubichatconsole.h
UbiChatServer/: CMakeLists.txt  main.cpp  ubichatserver.cpp  ubichatserver.hpp  ubichatsession.cpp  ubichatsession.hpp
UbiLib/: CMakeLists.txt  ubilib.hpp  unixsignalhandler.cpp  unixsignalhandler.hpp
